--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,23 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
   pool: 5
   timeout: 5000
+  username: developer
+  host: 172.16.10.10
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: kurbo_sample_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: kurbo_sample_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: kurbo_sample_prod
